experiments/convoLOG/5879.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/5879.c(67): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/5879.c(69): error: simd clause is incompatible with directive
  #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                               ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/5879.c(72): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/5879.c(80): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk3/tmp_files/5879.c (code 2)
